cosmetic bugs on mobile devices fixed up

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,6 @@
   --color-tertiary: #ff009d;
 
   color: white;
-  background-color: var(--color-primary);
 
   --neon-shadow: 0 0 4px white, 0 0 11px white, 0 0 19px white,
     0 0 40px var(--color-tertiary), 0 0 80px var(--color-tertiary),
@@ -116,7 +115,6 @@ a {
     url("/assets/quiDoveBattono.jpg");
   background-size: 250%;
   background-position: center 35%;
-  background-attachment: fixed;
 }
 
 @media only screen and (min-width: 768px) {
@@ -198,9 +196,11 @@ a.side-section {
   max-width: 700px;
   align-items: center;
   justify-content: space-between;
-  padding: 20px 0;
 }
 
+#menu-access {
+  padding: 20px;
+}
 .menu-cards-container {
   display: grid;
   grid-template-columns: auto;
@@ -235,7 +235,7 @@ a.side-section {
   flex-direction: column;
   position: fixed;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   top: 0;
   z-index: 999;
   background-color: var(--color-primary);
@@ -288,7 +288,6 @@ div.menu-row p {
 }
 
 #about-us {
-  height: 100svh;
   padding: 0 20px;
   background-color: transparent;
 }
@@ -308,6 +307,8 @@ div.menu-row p {
 
 .carousel-container {
   width: 100%;
+  height: 100vh;
+  height: 100lvh;
   overflow: hidden;
   position: fixed;
   z-index: -1;
